Implement moving events UI and score view page.

--- a/bout-time/history-events.plist
+++ b/bout-time/history-events.plist
@@ -4,11 +4,11 @@
 <array>
 	<dict>
 		<key>description</key>
-		<string>War in Afghanistan started</string>
+		<string>People&apos;s Republic of China was established</string>
 		<key>time</key>
-		<string>2001</string>
+		<string>1949</string>
 		<key>wikiUrl</key>
-		<string>https://en.wikipedia.org/wiki/War_in_Afghanistan_(2001–2014)</string>
+		<string>https://en.wikipedia.org/wiki/China</string>
 	</dict>
 	<dict>
 		<key>description</key>
